--- a/front/angular.json
+++ b/front/angular.json
@@ -21,12 +21,16 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              {
+              "src/assets",
+              { 
+                
                 "glob": "**/*",
                 "input": "public"
+                
               }
             ],
             "styles": [
+              
               "src/styles.css"
             ],
             "scripts": []
@@ -80,6 +84,7 @@
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               {
+                
                 "glob": "**/*",
                 "input": "public"
               }
